--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "sass": "^1.26.8",
         "sass-loader": "^8.0.0",
         "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "crypto-js": "^4.0.0"
     }
 }
