--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js?id=b9c337f6b2d3a3e5b94e",
-    "/js/main.js": "/js/main.js?id=05e665c156b9bb9a29a9",
-    "/css/app.css": "/css/app.css?id=0c576abeea878c22a0a8",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=b88aa3efa6e5366cbde8"
+    "/js/admin.js": "/js/admin.js",
+    "/js/main.js": "/js/main.js",
+    "/css/app.css": "/css/app.css",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
 }
