--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "cleave.js": "^1.6.0",
         "crypto-js": "^4.0.0"
     }
 }
