--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js?id=f9245cced1ad9b503bf5",
-    "/js/main.js": "/js/main.js?id=62b70f3adb7989b304d6",
-    "/css/app.css": "/css/app.css?id=005fdeac7da877218cca",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=b88aa3efa6e5366cbde8"
+    "/js/admin.js": "/js/admin.js",
+    "/js/main.js": "/js/main.js",
+    "/css/app.css": "/css/app.css",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
 }
