--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
+        "bootstrap": "^4.5.0",
         "cleave.js": "^1.6.0",
         "crypto-js": "^4.0.0",
-        "litepicker": "^1.5.7"
+        "jquery": "^3.5.1",
+        "litepicker": "^1.5.7",
+        "popper.js": "^1.16.1",
+        "slick-carousel": "^1.8.1"
     }
 }
