--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=06c48390dbe9dc88bf9a",
+    "/js/main.js": "/js/main.js?id=3d1d345e13c75a20a312",
+    "/css/app.css": "/css/app.css?id=ef48e256ba8f6893b744",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=b88aa3efa6e5366cbde8"
 }
