--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.5.0",
+        "bootstrap-select": "^1.13.18",
         "cleave.js": "^1.6.0",
         "crypto-js": "^4.0.0",
         "jquery": "^3.5.1",
