--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=06c48390dbe9dc88bf9a",
+    "/js/main.js": "/js/main.js?id=43e3c6a6241debfa355a",
+    "/css/app.css": "/css/app.css?id=a58824f40563d47d8ec6",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=486f05abac60ab2d19fc"
 }
