--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=e77958ee89951071bfc8",
+    "/css/app.css": "/css/app.css?id=5554ebac57a1e1f89a55",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=51bfd4bd75812cb011e0"
 }
