--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=94943748ae6e9f42535e",
+    "/css/app.css": "/css/app.css?id=9911ecbe3f386a781dd4",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=bee0a83e4c72bae9d9e1"
 }
