--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=e674b8132379e62e6de9",
+    "/css/app.css": "/css/app.css?id=e8b382ae2dfd52226017",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=5bc2a8c771a4de50e2e7"
 }
