modal de editar imágenes de logos de los landings

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
-    "/js/main.js": "/js/main.js?id=c84706b9c5489a4e69c4",
-    "/css/app.css": "/css/app.css?id=2e376429f99bf4e4f22e",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=03aa6a8dd20fabd16b8c"
+    "/js/admin.js": "/js/admin.js",
+    "/js/main.js": "/js/main.js",
+    "/css/app.css": "/css/app.css",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
 }
