--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=480c35bfdcf2c5a71012",
+    "/css/app.css": "/css/app.css?id=e095668e6352c9d71170",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=a1f25b57c32364b2fb1d"
 }
