--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=109b6abf395dd4ba313b",
+    "/css/app.css": "/css/app.css?id=8da1f54c4f7f89cd799d",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=e23dc4159cfa4a894b23"
 }
