--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=2a73f4a8620594f056f2",
+    "/css/app.css": "/css/app.css?id=8da1f54c4f7f89cd799d",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=3d13bd2cc06968e03095"
 }
