--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=9f0661f2a3d4d00b69d4",
+    "/css/app.css": "/css/app.css?id=b59526a3daad6f191365",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=da11d037c564ae4a2443"
 }
