quitar outline de selector

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=bce07ed4b6463e8c0c11",
+    "/css/app.css": "/css/app.css?id=809192ce23520641d70e",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=afdbf32b48eaa823f2b8"
 }
