--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
-    "/js/main.js": "/js/main.js?id=19fd80246071fed01d09",
-    "/css/app.css": "/css/app.css?id=1f18e17edadfcd29c361",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=5cf643f69c369b610e39"
+    "/js/admin.js": "/js/admin.js",
+    "/js/main.js": "/js/main.js",
+    "/css/app.css": "/css/app.css",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
 }
