estilos y colocacion de imagen en banner

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=9ed554f1fd33e2f3d7df",
+    "/css/app.css": "/css/app.css?id=c075dbb2f41cc5e7b050",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=9d89dc73cd97d5de7421"
 }
