modal de claro-inema

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=e0e8b92415cacc818baa",
+    "/css/app.css": "/css/app.css?id=0542019b95680dc7347e",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=e6c7bd95176ad001efe6"
 }
