maqueta decinema y ligas de programacion-cinema-concert

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
-    "/js/main.js": "/js/main.js?id=fd120954257a67577f8d",
-    "/css/app.css": "/css/app.css?id=4b80f3b18f4d724d52d3",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=ec66da426a80e591c6ea"
+    "/js/admin.js": "/js/admin.js",
+    "/js/main.js": "/js/main.js",
+    "/css/app.css": "/css/app.css",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
 }
