--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=5130408f9d06b63388a0",
+    "/css/app.css": "/css/app.css?id=43b84f977d60e13b4c95",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=b6c2cf61dea3b5740637"
 }
