modales de concert channel, en el iframe

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=3868f0ce9091d7dc82ea",
+    "/css/app.css": "/css/app.css?id=6f6848ee389ea8d7ccf2",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=0ea29472b7736f58b444"
 }
