--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
-    "/js/main.js": "/js/main.js?id=c11342efa7e29b1a027e",
-    "/css/app.css": "/css/app.css?id=6f6848ee389ea8d7ccf2",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=969582c4041d84801879"
+    "/js/admin.js": "/js/admin.js",
+    "/js/main.js": "/js/main.js",
+    "/css/app.css": "/css/app.css",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
 }
