--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
-    "/js/main.js": "/js/main.js?id=6a9a690c59453401c836",
-    "/css/app.css": "/css/app.css?id=efdf72f0ea050cf2aa78",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=25bb24df4811041c3db8"
+    "/js/admin.js": "/js/admin.js",
+    "/js/main.js": "/js/main.js",
+    "/css/app.css": "/css/app.css",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
 }
