mostrar modales en el iframe

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=84555128d3173ba16ec6",
+    "/css/app.css": "/css/app.css?id=99f7849c2fb20f399b06",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=27ba49db48ddcd5f8786"
 }
