--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=16fae4a368883c61ae42",
+    "/css/app.css": "/css/app.css?id=1d54ab69e92fe0e68d4d",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=36c549b61669ab0d45b0"
 }
