--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "crypto-js": "^4.0.0",
         "jquery": "^3.5.1",
         "litepicker": "^1.5.7",
+        "lozad": "^1.16.0",
         "popper.js": "^1.16.1",
         "select2": "^4.0.13",
         "slick-carousel": "^1.8.1"
