--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/admin.js": "/js/admin.js",
-    "/js/main.js": "/js/main.js",
-    "/css/app.css": "/css/app.css",
-    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js"
+    "/js/admin.js": "/js/admin.js?id=37c1e674668ea4aa8677",
+    "/js/main.js": "/js/main.js?id=ca1891d1a70648f15f37",
+    "/css/app.css": "/css/app.css?id=b629753da383b6960ace",
+    "/js/operaciones_grilla.js": "/js/operaciones_grilla.js?id=fa31fdee2352bf44c93b"
 }
